# dune-weaver

./: .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  main.py  mise.toml  pyproject.toml  requirements.txt
modules/connection/: connection_manager.py
modules/core/: pattern_manager.py  state.py
modules/led/: dw_led_controller.py  led_controller.py  led_interface.py
static/css/: tailwind.css
static/js/: index.js  led-control.js
templates/: index.html  led.html
